scripting/source/basprov/basprov.hxx
@@ -29,6 +29,7 @@
 #include <com/sun/star/document/XScriptInvocationContext.hpp>
 #include <com/sun/star/uno/XComponentContext.hpp>
 #include <cppuhelper/implbase.hxx>
+#include <svl/lstner.hxx>
 
 class BasicManager;
 
@@ -47,7 +48,7 @@ namespace basprov
         css::script::browse::XBrowseNode > BasicProviderImpl_BASE;
 
 
-    class BasicProviderImpl : public BasicProviderImpl_BASE
+    class BasicProviderImpl : public BasicProviderImpl_BASE, public SfxListener
     {
     private:
         BasicManager*   m_pAppBasicManager;
@@ -86,6 +87,10 @@ namespace basprov
         virtual css::uno::Sequence< css::uno::Reference< css::script::browse::XBrowseNode > > SAL_CALL getChildNodes(  ) override;
         virtual sal_Bool SAL_CALL hasChildNodes(  ) override;
         virtual sal_Int16 SAL_CALL getType(  ) override;
+
+    protected:
+        // SfxListener
+        virtual void Notify(SfxBroadcaster& rBC, const SfxHint& rHint) override;
     };
 
 
